--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 .intro{
     font-size: 30px;
     margin-top:100px;
+    margin-left:40px;
 }
  span{
     color:orange;
@@ -60,6 +61,10 @@ body{
 .header-p-alignment{
     text-align:center;
     margin:15px 280px;
+    
+}
+.header-p-alignment h1{
+    font-size: 50px;
 }
 .one-third{
     width:30%;
